<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-parent</artifactId>
        <version>3.3.4</version>
    </parent>

    <groupId>gr.uoa.di.madgik</groupId>
    <artifactId>registry</artifactId>
    <version>4.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>registry</name>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring-boot.version>${project.parent.version}</spring-boot.version>
        <logging.version>2.23.1</logging.version>
        <joda-time.version>2.12.5</joda-time.version>
        <hibernate.version>6.5.2.Final</hibernate.version>
        <elasticsearch.version>7.17.14</elasticsearch.version>
    </properties>

    <modules>
        <module>registry-core-service</module>
        <module>registry-core-api</module>
        <module>registry-core-rest</module>
        <module>registry-core-helper</module>
        <module>registry-core-resource-sync</module>
        <module>registry-core-client</module>
        <module>registry-core-elasticsearch</module>
        <module>registry-core-jms</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>3.3.4</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>gr.uoa.di.madgik</groupId>
                <artifactId>registry-core-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>gr.uoa.di.madgik</groupId>
                <artifactId>registry-core-client</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>gr.uoa.di.madgik</groupId>
                <artifactId>registry-core-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>gr.uoa.di.madgik</groupId>
                <artifactId>registry-core-rest</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>gr.uoa.di.madgik</groupId>
                <artifactId>registry-core-elasticsearch</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>gr.uoa.di.madgik</groupId>
                <artifactId>registry-core-jms</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>gr.uoa.di.madgik</groupId>
                <artifactId>registry-core-helper</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>gr.uoa.di.madgik</groupId>
                <artifactId>registry-core-resource-sync</artifactId>
                <version>${project.version}</version>
            </dependency>


            <dependency>
                <groupId>org.springframework.batch</groupId>
                <artifactId>spring-batch-core</artifactId>
                <version>5.1.2</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.retry</groupId>
                <artifactId>spring-retry</artifactId>
                <version>1.3.4</version>
            </dependency>

            <dependency>
                <groupId>org.everit.json</groupId>
                <artifactId>org.everit.json.schema</artifactId>
                <version>1.5.1</version>
                <exclusions>
                    <exclusion>
                        <groupId>commons-logging</groupId>
                        <artifactId>commons-logging</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>org.hibernate.orm</groupId>
                <artifactId>hibernate-core</artifactId>
                <version>${hibernate.version}</version>
            </dependency>

            <dependency>
                <groupId>jakarta.servlet</groupId>
                <artifactId>jakarta.servlet-api</artifactId>
                <version>6.1.0</version>
            </dependency>
            <dependency>
                <groupId>jakarta.annotation</groupId>
                <artifactId>jakarta.annotation-api</artifactId>
                <version>3.0.0</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>jakarta.persistence</groupId>
                <artifactId>jakarta.persistence-api</artifactId>
                <version>3.1.0</version>
            </dependency>
            <dependency>
                <groupId>jakarta.validation</groupId>
                <artifactId>jakarta.validation-api</artifactId>
                <version>3.1.0</version>
            </dependency>
            <dependency>
                <groupId>jakarta.xml.bind</groupId>
                <artifactId>jakarta.xml.bind-api</artifactId>
                <version>4.0.2</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.15.0</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>2.6.0</version>
            </dependency>

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.13.2</version>
                <scope>test</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.13</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>${logging.version}</version>
        </dependency>
    </dependencies>

    <scm>
        <connection>scm:git:ssh://git@github.com/madgeek-arc/registry.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/madgeek-arc/registry.git</developerConnection>
        <url>https://github.com/madgeek-arc/registry</url>
        <tag>HEAD</tag>
    </scm>

    <distributionManagement>
        <repository>
            <uniqueVersion>true</uniqueVersion>
            <id>madgik-releases</id>
            <layout>default</layout>
            <url>https://repo.madgik.di.uoa.gr/content/repositories/releases</url>
        </repository>
        <snapshotRepository>
            <uniqueVersion>true</uniqueVersion>
            <id>madgik-snapshots</id>
            <layout>default</layout>
            <url>https://repo.madgik.di.uoa.gr/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>madgik-snapshots</id>
            <layout>default</layout>
            <url>https://repo.madgik.di.uoa.gr/content/repositories/snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>madgik-releases</id>
            <layout>default</layout>
            <url>https://repo.madgik.di.uoa.gr/content/repositories/releases</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>3.1.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <parameters>true</parameters>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.6.3</version>
                    <configuration>
                        <encoding>UTF-8</encoding>
                        <maxmemory>512m</maxmemory>
                    </configuration>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>${basedir}/src/main/resources</directory>
                <filtering>true</filtering>
                <excludes>
                    <exclude>**/application*.yml</exclude>
                    <exclude>**/application*.yaml</exclude>
                    <exclude>**/application*.properties</exclude>
                </excludes>
            </resource>
        </resources>
    </build>

</project>
